# AnimeRecommendationSystem

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/app/: __init__.py  main.py
src/data/: data_provider.py  download_dataset.py
src/interfaces/: recommendation_interface.py
src/models/: __init__.py  collaborative_filtering.py  content_based_filtering.py  hybrid_recommender.py
src/services/: __init__.py  recommendation_service.py
tests/: test_data_provider.py  test_recommendation_service.py
