[project]
name = "anime-recommendation-system"
version = "0.1.0"
description = "Kaggleの「Anime Recommendation Database 2020」データセットを使用したアニメレコメンドシステム"
authors = [
    {name = "Anime Recommendation System", email = "example@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "matplotlib>=3.8.0,<3.10.0",
    "seaborn>=0.13.0",
    "streamlit>=1.29.0",
    "plotly>=5.17.0",
    "requests>=2.31.0",
    "kaggle>=1.5.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
anime-recommendation = "src.app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html --cov-report=term" 